Included precision, recall, F1 scores

--- a/NaiveApproach2.ipynb
+++ b/NaiveApproach2.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "c465e026",
+   "id": "20716783",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e5aec48",
+   "id": "18ced230",
    "metadata": {},
    "source": [
     "## Finds the two best methods (by F1 score) and gets their intersection"
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "61c7e47f",
+   "id": "abdbc768",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": 140,
-   "id": "bc0d6097",
+   "id": "2d0e7c72",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 141,
-   "id": "fa6995ff",
+   "id": "9f164d90",
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +118,7 @@
   {
    "cell_type": "code",
    "execution_count": 142,
-   "id": "069931b9",
+   "id": "93cd091c",
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "54f4f631",
+   "id": "0d0773d1",
    "metadata": {},
    "source": [
     "## Tests accuracy of method"
@@ -192,7 +192,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "1bb5a044",
+   "id": "dc8512cb",
    "metadata": {},
    "outputs": [
     {
@@ -292,7 +292,7 @@
   {
    "cell_type": "code",
    "execution_count": 133,
-   "id": "26428866",
+   "id": "eac41d83",
    "metadata": {},
    "outputs": [
     {
@@ -428,7 +428,7 @@
   {
    "cell_type": "code",
    "execution_count": 135,
-   "id": "16a29c4b",
+   "id": "862cdac2",
    "metadata": {},
    "outputs": [
     {
@@ -596,7 +596,7 @@
   {
    "cell_type": "code",
    "execution_count": 136,
-   "id": "a70aac80",
+   "id": "cc9f2cf6",
    "metadata": {},
    "outputs": [
     {
@@ -619,7 +619,7 @@
   {
    "cell_type": "code",
    "execution_count": 137,
-   "id": "da959174",
+   "id": "2faaba8f",
    "metadata": {},
    "outputs": [
     {
@@ -784,7 +784,158 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fdaab992",
+   "id": "4b39cee6",
+   "metadata": {},
+   "source": [
+    "## Tests accuracy for other datasets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "id": "957c7273",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# pre: best_methods is a 2D list where each entry contains 2 best algos for the dataset\n",
+    "\n",
+    "path_to_datasets = '/Volumes/Samsung_T5/4220 proj/'\n",
+    "dataset_names = ['syn1','syn2','syn3','syn4','syn5','real1']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "id": "b6e478a3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "syn1: ['freebayes', 'mutect2']\n",
+      "Precision: 0.38625566235775055\n",
+      "Recall: 0.988408255583828\n",
+      "F1: 0.5554496345726089\n",
+      "syn2: ['freebayes', 'mutect2']\n",
+      "Precision: 0.40939597315436244\n",
+      "Recall: 0.9856879039704525\n",
+      "F1: 0.578512396694215\n",
+      "syn3: ['vardict', 'mutect2']\n",
+      "Precision: 0.43732478974769723\n",
+      "Recall: 0.9672276350752879\n",
+      "F1: 0.6023166023166023\n",
+      "syn4: ['vardict', 'mutect2']\n",
+      "Precision: 0.43521434539494824\n",
+      "Recall: 0.8300950045969966\n",
+      "F1: 0.571037041722008\n",
+      "syn5: ['vardict', 'mutect2']\n",
+      "Precision: 0.9678513981006104\n",
+      "Recall: 0.9678513981006104\n",
+      "F1: 0.9678513981006104\n",
+      "real1: ['vardict', 'mutect2']\n",
+      "Precision: 0.09652477552377785\n",
+      "Recall: 0.8802122820318423\n",
+      "F1: 0.17397167902899527\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Get scores for all datasets\n",
+    "\n",
+    "features = ['CHROM','POS','is_snp']\n",
+    "keep_same = {'CHROM', 'POS'}\n",
+    "\n",
+    "for i in range(len(dataset_names)):\n",
+    "    path_to_gt = f'{path_to_datasets}{dataset_names[i]}/{dataset_names[i]}_truth.bed'\n",
+    "\n",
+    "    gt = find_GT(path_to_gt)\n",
+    "    \n",
+    "    algos = best_methods[i] # top two algos\n",
+    "\n",
+    "    dfs = [allel.vcf_to_dataframe(f'{path_to_datasets}{dataset_names[i]}/{dataset_names[i]}-{alg}.vcf.gz', fields=features) for alg in algos]\n",
+    "\n",
+    "    for j in range(2):\n",
+    "        dfs[j] = dfs[j][dfs[j]['is_snp']] # obtain only SNPs\n",
+    "        dfs[j].columns = ['{}{}'.format(c, '' if c in keep_same else '_' + algos[j]) for c in dfs[j].columns]\n",
+    "\n",
+    "    merged = reduce(lambda left, right: pd.merge(left, right, on =['CHROM', 'POS'],\n",
+    "                                                    how = 'inner', suffixes = ('', '')), dfs)\n",
+    "\n",
+    "    merged['is_snp'] = 1\n",
+    "    \n",
+    "    combined = merged.merge(gt, on=['CHROM','POS'], how='outer')\n",
+    "    combined['truth'].fillna(0, inplace = True)\n",
+    "    combined['is_snp'].fillna(0, inplace=True)\n",
+    "    \n",
+    "    precision_score = metrics.precision_score(y_true = combined['truth'], y_pred = combined['is_snp'])\n",
+    "    recall_score = metrics.recall_score(y_true = combined['truth'], y_pred = combined['is_snp'])\n",
+    "    f1_score = metrics.f1_score(y_true = combined['truth'], y_pred = combined['is_snp'])\n",
+    "\n",
+    "    print(f'{dataset_names[i]}: {best_methods[i]}')\n",
+    "    print(f'Precision: {precision_score}')\n",
+    "    print(f'Recall: {recall_score}')\n",
+    "    print(f'F1: {f1_score}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "id": "8064f424",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "real1: ['vardict', 'mutect2']\n",
+      "Precision: 0.0\n",
+      "Recall: 0.0\n",
+      "F1: 0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Get scores for real2 part1\n",
+    "\n",
+    "features = ['CHROM','POS','is_snp']\n",
+    "keep_same = {'CHROM', 'POS'}\n",
+    "\n",
+    "path_to_gt = f'{path_to_datasets}real2_part1/real2_truth_chr1to5.bed'\n",
+    "\n",
+    "gt = find_GT(path_to_gt)\n",
+    "gt['CHROM'] = gt['CHROM'].astype('O')\n",
+    "\n",
+    "algos = ['vardict','mutect2'] # top two algos\n",
+    "\n",
+    "dfs = [allel.vcf_to_dataframe(f'{path_to_datasets}real2_part1/real2_{alg}_chr1to5.vcf.gz', fields=features) for alg in algos]\n",
+    "\n",
+    "for j in range(2):\n",
+    "    dfs[j] = dfs[j][dfs[j]['is_snp']] # obtain only SNPs\n",
+    "    dfs[j].columns = ['{}{}'.format(c, '' if c in keep_same else '_' + algos[j]) for c in dfs[j].columns]\n",
+    "\n",
+    "merged = reduce(lambda left, right: pd.merge(left, right, on =['CHROM', 'POS'],\n",
+    "                                                how = 'inner', suffixes = ('', '')), dfs)\n",
+    "\n",
+    "merged['is_snp'] = 1\n",
+    "\n",
+    "combined = merged.merge(gt, on=['CHROM','POS'], how='outer')\n",
+    "combined['truth'].fillna(0, inplace = True)\n",
+    "combined['is_snp'].fillna(0, inplace=True)\n",
+    "\n",
+    "precision_score = metrics.precision_score(y_true = combined['truth'], y_pred = combined['is_snp'])\n",
+    "recall_score = metrics.recall_score(y_true = combined['truth'], y_pred = combined['is_snp'])\n",
+    "f1_score = metrics.f1_score(y_true = combined['truth'], y_pred = combined['is_snp'])\n",
+    "\n",
+    "print(f'{dataset_names[i]}: {best_methods[i]}')\n",
+    "print(f'Precision: {precision_score}')\n",
+    "print(f'Recall: {recall_score}')\n",
+    "print(f'F1: {f1_score}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ff61c9f9",
    "metadata": {},
    "source": [
     "## Checking that the F1 calculation method works"
@@ -792,8 +943,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
-   "id": "ba95ef7c",
+   "execution_count": 143,
+   "id": "07233afd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -810,36 +961,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
-   "id": "d0074d17",
+   "execution_count": 144,
+   "id": "207b8b6c",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.5571658615136876"
-      ]
-     },
-     "execution_count": 130,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Precision: 0.39993394980184943\n",
+      "Recall: 0.9181197877179682\n",
+      "F1: 0.5571658615136876\n"
+     ]
     }
    ],
    "source": [
     "combined = gt_try.merge(gt_pred, on=['CHROM','POS'], how='outer')\n",
     "combined['truth'].fillna(0, inplace=True)\n",
     "combined['pred'].fillna(0, inplace=True)\n",
+    "\n",
+    "precision_score = metrics.precision_score(y_true = combined['truth'], y_pred = combined['pred'])\n",
+    "recall_score = metrics.recall_score(y_true = combined['truth'], y_pred = combined['pred'])\n",
     "f1_score = metrics.f1_score(y_true = combined['truth'], y_pred = combined['pred'])\n",
-    "f1_score # 0.5571659 from Prof's function"
+    "\n",
+    "print(f'Precision: {precision_score}')\n",
+    "print(f'Recall: {recall_score}')\n",
+    "print(f'F1: {f1_score}')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a8b7ef54",
+   "id": "fb51c5b2",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Result should be 0.3999339 0.9181198 0.5571659"
+   ]
   }
  ],
  "metadata": {
