--- a/src/GradientBoostingOptimised.ipynb
+++ b/src/GradientBoostingOptimised.ipynb
@@ -118,7 +118,7 @@
    "source": [
     "# load optimizer\n",
     "from skopt import load\n",
-    "bayes_cv = load('optimise3.pkl')"
+    "bayes_cv = load('optimise2.pkl')"
    ]
   },
   {
@@ -485,7 +485,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Optimiser 1 (fitted without encoding during optimisation)"
+    "### Optimiser 1 "
    ]
   },
   {
@@ -496,7 +496,7 @@
    "source": [
     "# load optimizer\n",
     "from skopt import load\n",
-    "bayes_cv = load('optimise2.pkl')"
+    "bayes_cv = load('optimise1.pkl')"
    ]
   },
   {
@@ -1673,26 +1673,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "XGBClassifier(base_score=None, booster=None, callbacks=None,\n",
-    "              colsample_bylevel=None, colsample_bynode=None,\n",
-    "              colsample_bytree=0.7144725275959898, early_stopping_rounds=50,\n",
-    "              enable_categorical=True, eval_metric=None, feature_types=None,\n",
-    "              gamma=0.31035547140858155, gpu_id=None, grow_policy=None,\n",
-    "              importance_type=None, interaction_constraints=None,\n",
-    "              learning_rate=0.013273485724617099, max_bin=None,\n",
-    "              max_cat_threshold=None, max_cat_to_onehot=None,\n",
-    "              max_delta_step=None, max_depth=20, max_leaves=None,\n",
-    "              min_child_weight=None, missing=nan, monotone_constraints=None,\n",
-    "              n_estimators=2292, n_jobs=None, num_parallel_tree=None,\n",
-    "              predictor=None, random_state=None, ...)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
    "outputs": [],
@@ -1870,7 +1850,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.12"
   },
   "vscode": {
    "interpreter": {
